...
    <string name="favorite_tutors">Favorite Tutors</string>
    <string name="screen_only_student">This screen is only available for students.</string>
    <string name="no_favorite_tutors">No tutor marked as favorite.</string>
    <string name="ask_lesson_with_tutor">Ask for a lesson with this tutor</string>

    <!-- Error Messages -->
    <string name="no_profile_selected">No profile selected. Should not happen.</string>
    <string name="no_tutor_selected">No tutor selected. Should not happen.</string>
    <string name="no_lesson_selected">No lesson selected. Should not happen.</string>

</resources>
